unpackaged/main/default/objects/Sample_Kit_Shipping_Address__c/Sample_Kit_Shipping_Address__c.object-meta.xml
<CustomObject>
    <description>This object stores all the addresses used for Knob Creek Sample Kit Delivery</description>
    <label>Sample Kit Shipping Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Kit Shipping Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>