unpackaged/main/default/objects/Sample_Kit_Shipping_Address__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
                <default>true</default>
                <label>USA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>