unpackaged/main/default/objects/Sample_Kit_Shipping_Address__c/fields/Legal_to_receive_Sample_Kit__c.field-meta.xml
<CustomField>
    <fullName>Legal_to_receive_Sample_Kit__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Legal to receive Sample Kit</label>
    <type>Checkbox</type>
</CustomField>