unpackaged/main/default/objects/Sample_Kit_Shipping_Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>